--- a/CorsTest/appsettings.json
+++ b/CorsTest/appsettings.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "https://stage.meetupfarsi.com"
+  "AllowedHosts": "https://example.com"
 }
